2004-11-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-tab-header.c: Update to the fixed ExoEllipsizedLabel
	  API.
	* docs/C/: Update version.
	* configure.ac, NEWS: Update version to 0.2.0pre1.

2004-11-25	Benedikt Meurer <benny@xfce.org>

	* docs/C/: Correct date.

2004-11-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-toolbars-view.c: Keep up with the changes to
	  ExoToolbarsView.
	* docs/: Updated documentation and added information about files
	  and environment variables.
	* Terminal.1: Fix several typos.
	* TODO: Update TODO list.

2004-11-24	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-options.c: Fix crash if an invalid option is
	  passed to Terminal.
	* terminal/Makefile.am: Don't include the stock icon pngs in the
	  final dist tarball, as all the information is already included
	  in the stock-icons.h file.
	* terminal/main.c: Prepend standard arguments instead of appending
	  them to avoid problems with -x/--execute.
	* doc/: Updated online documentation.
	* po/: Updated translations.

2004-11-24	Benedikt Meurer <benny@xfce.org>

	* terminal/stock-*48.png, terminal/stock-icons.h, terminal/main.c,
	  terminal/terminal-window.c, terminal/terminal-shortcut-editor.c,
	  terminal/terminal-preferences-dialog.c, icons/, pixmaps/, Makefile.am,
	  configure.ac: Use stock icons instead of loading the icons at runtime
	  to reduce startup time and avoid problems with improperly system
	  setups.

2004-11-23	Benedikt Meurer <benny@xfce.org>

	* NEWS: Collected all changes for the next release, that have been made
	  so far.

2004-11-23	Benedikt Meurer <benny@xfce.org>

	* terminal/Makefile.am: Symlink executable 'Terminal' to 'terminal'.
	* terminal/terminal-window.c, terminal/terminal-preferences.c: Added
	  confirmation dialog, that pops up when a window with more than one
	  tab is about to be closed. The confirmation can be disabled from
	  the dialog. This fixes bug #22.
	* README, HACKING, THANKS: Improved these documents.