@@ -1,4 +1,12 @@
-2004-11-25	Benedikt Meurer <benny@xfce.org>
+2004-11-27	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-shortcut-editor.c, po/: Better error message dialog
+	  when Terminal failes to grab the keyboard for shortcut input.
+	* terminal/terminal-preferences-dialog.c: Revert bottom-margin change
+	  to the shortcuts page, because it looks odd with themes other than
+	  the ones included with Xfce.
+
+2004-11-26	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-tab-header.c: Update to the fixed ExoEllipsizedLabel
 	  API.
